--- a/css/productList.css
+++ b/css/productList.css
@@ -12,7 +12,7 @@
     }
 
     .filter {
-        width: 20%;
+    width: 20%;
     height: 640px;
     padding: 20px 15px;
     border-radius: 20px;
@@ -20,11 +20,14 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
+    border: 1px solid #6125A1;
+    border-radius: 6px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
 
     .filter .title {
         color: #6125A1;
-        font-size: 20px;
+        font-size: 30px;
         margin-bottom: 20px;
     }
 
@@ -185,12 +188,14 @@
     height: 50px;
     line-height: 50px;
     margin-top: 10px;
-    border-radius: 12px;
     text-align: center;
     font-size: 30px;
     color: #3B1672;
     background-color: #EDA1E9;
     font-weight: 700;
+    border: 1px solid #6125A1;
+    border-radius: 6px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
   }
 
 
@@ -282,7 +287,7 @@
         gap: 10%;
         margin: 10px 0 30px;
     }
-    .filter .left{
+        .filter .left {
         flex: 1;
         display: flex;
         justify-content: space-between;
@@ -293,19 +298,20 @@
         padding: 4px 13px;
         border-radius: 10px;
     }
-    .filter .right{
+    .filter .right {
         flex: 1;
-    padding: 4px 13px;
-    border-radius: 10px;
-    background-color: #FFCD95;
-    color: #6125A1;
+        padding: 4px 13px;
+        background-color: #FFCD95;
+        border: 1px solid #6125A1;
+        border-radius: 6px;
+        box-shadow: 0 4px 10px rgba(0,0,0,0.1);
 
-    display: flex;
-    align-items: center;         
-    justify-content: center;     
-    gap: 8px;                  
+        display: flex;
+        align-items: center;         
+        justify-content: center;     
+        gap: 8px;                  
     }
-    .filter img{
+    .filter img {
         width: 20px;
     }
     
@@ -322,3 +328,107 @@
   transform: translateY(-6px); 
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25); 
 }
+
+.sort-dropdown {
+  position: relative;
+}
+
+.sort-menu {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background-color: #FFCD95;
+  border: 1px solid #6125A1;
+  border-radius: 6px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  width: 180px;
+  max-height: 0;
+  overflow: hidden;
+  opacity: 0;
+  transition: all 0.3s ease;
+  z-index: 99;
+  padding: 0;
+  margin-top: 6px;
+}
+
+.sort-menu li {
+  padding: 10px;
+  font-size: 16px;
+  font-weight: 400;
+  cursor: pointer;
+  list-style: none;
+}
+
+.sort-menu li:hover {
+  background-color: #f19e4a;
+}
+
+.sort-dropdown.active .sort-menu {
+  max-height: 300px;
+  opacity: 1;
+}
+
+.arrow-icon {
+  transition: transform 0.3s ease;
+}
+
+.sort-dropdown.active .arrow-icon {
+  transform: rotate(180deg);
+}
+
+.sort-toggle {
+    font-weight: 550;
+}
+
+.filter-dropdown {
+  position: relative;
+}
+
+.filter-toggle {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  cursor: pointer;
+}
+
+.filter-icon {
+  width: 24px;
+  transition: transform 0.3s ease;
+}
+
+
+
+.filter-menu {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background:#3B1672;
+  border: 1px solid #aaa;
+  border-radius: 6px;
+  width: 160px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  opacity: 0;
+  max-height: 0;
+  overflow: hidden;
+  padding: 0;
+  margin-top: 8px;
+  transition: all 0.3s ease;
+  z-index: 99;
+}
+
+.filter-menu li {
+  list-style: none;
+  padding: 10px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.filter-menu li:hover {
+  background-color: #eee;
+}
+
+.filter-dropdown.active .filter-menu {
+  opacity: 1;
+  max-height: 300px;
+}
+
