--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,4 @@
+/* desktop version */
 @media screen and (min-width: 1024px) {
   .product-module {
     display: flex;
@@ -62,6 +63,7 @@
 
 }
 
+/* overall styles for carousel */
 .carousel {
   position: relative;
   max-width: 1000px;
@@ -134,6 +136,7 @@
   background: rgba(255, 255, 255, 1);
 }
 
+/* mobile version */
 @media screen and (min-width: 300px) and (max-width: 1024px) {
   .carousel-item {
     height: 300px;
