--- a/css/productList.css
+++ b/css/productList.css
@@ -1,3 +1,4 @@
+/* desktop version */
 @media screen and (min-width: 1024px) {
   .goods-filter {
     display: flex;
@@ -194,6 +195,7 @@
   }
 }
 
+/* mobile version */
 @media screen and (min-width: 300px) and (max-width: 1024px) {
   .goods-filter {
     display: flex;
@@ -306,7 +308,7 @@
   }
 }
 
-
+/* Dynamic effects of product cards */
 .item {
   border: 1px solid #000;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
@@ -317,7 +319,7 @@
   transform: translateY(-6px);
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
 }
-
+/* styles for drop down menu for filters and sort options in mobile version */
 .sort-dropdown {
   position: relative;
 }
