--- a/css/productList.css
+++ b/css/productList.css
@@ -280,13 +280,14 @@
   .filter .left {
     flex: 1;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     background-color: #36135B;
     color: #FFCD95;
-    border: 1px solid #FFCD95;
+    border: 1px solid #aaa;
     padding: 4px 13px;
     border-radius: 10px;
+    gap: 6px;
   }
 
   .filter .right {
@@ -301,9 +302,101 @@
     justify-content: center;
     gap: 8px;
   }
+  .filter img { 
+    width: 20px; 
+    margin-top: 2px;
+  }
 
-  .filter img {
-    width: 20px;
+  /* styles for drop down menu for filters and sort options in mobile version */
+  .sort-dropdown {
+    position: relative;
+  }
+
+  .sort-menu {
+    position: absolute;
+    top: 100%;
+    background-color: #FFCD95;
+    border: 1px solid #6125A1;
+    border-radius: 6px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    width: 160px;
+    max-height: 0;
+    overflow: hidden;
+    opacity: 0;
+    transition: all 0.3s ease;
+    z-index: 99;
+    padding: 0;
+    margin-top: 6px;
+    left: 0;
+  }
+
+  .sort-menu li {
+    padding: 10px;
+    font-size: 16px;
+    font-weight: 400;
+    cursor: pointer;
+    list-style: none;
+  }
+
+  .sort-menu li:hover {
+    background-color: #f19e4a;
+  }
+
+  .sort-dropdown.active .sort-menu {
+    max-height: 300px;
+    opacity: 1;
+  }
+
+
+
+  .filter-dropdown {
+    position: relative;
+  }
+
+  .filter-toggle {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    cursor: pointer;
+  }
+
+  .filter-icon {
+    width: 24px;
+    transition: transform 0.3s ease;
+  }
+
+  .filter-menu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background: #3B1672;
+    border: 1px solid #aaa;
+    border-radius: 6px;
+    width: 160px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    opacity: 0;
+    max-height: 0;
+    overflow: hidden;
+    padding: 0;
+    margin-top: 8px;
+    transition: all 0.3s ease;
+    z-index: 99;
+  }
+
+  .filter-menu li {
+    list-style: none;
+    padding: 10px;
+    font-size: 16px;
+    cursor: pointer;
+  }
+
+  .filter-menu li:hover {
+    background-color: #4705ab;
+  }
+
+  .filter-dropdown.active .filter-menu {
+    opacity: 1;
+    max-height: 300px;
   }
 }
 
@@ -317,105 +410,4 @@
 .item:hover {
   transform: translateY(-6px);
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
-}
-/* styles for drop down menu for filters and sort options in mobile version */
-.sort-dropdown {
-  position: relative;
-}
-
-.sort-menu {
-  position: absolute;
-  top: 100%;
-  background-color: #FFCD95;
-  border: 1px solid #6125A1;
-  border-radius: 6px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  width: 160px;
-  max-height: 0;
-  overflow: hidden;
-  opacity: 0;
-  transition: all 0.3s ease;
-  z-index: 99;
-  padding: 0;
-  margin-top: 6px;
-  left: 0;
-}
-
-.sort-menu li {
-  padding: 10px;
-  font-size: 16px;
-  font-weight: 400;
-  cursor: pointer;
-  list-style: none;
-}
-
-.sort-menu li:hover {
-  background-color: #f19e4a;
-}
-
-.sort-dropdown.active .sort-menu {
-  max-height: 300px;
-  opacity: 1;
-}
-
-.arrow-icon {
-  transition: transform 0.3s ease;
-}
-
-.sort-dropdown.active .arrow-icon {
-  transform: rotate(180deg);
-}
-
-.sort-toggle {
-  font-weight: 500;
-}
-
-.filter-dropdown {
-  position: relative;
-}
-
-.filter-toggle {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  cursor: pointer;
-}
-
-.filter-icon {
-  width: 24px;
-  transition: transform 0.3s ease;
-}
-
-.filter-menu {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  background: #3B1672;
-  border: 1px solid #aaa;
-  border-radius: 6px;
-  width: 160px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  opacity: 0;
-  max-height: 0;
-  overflow: hidden;
-  padding: 0;
-  margin-top: 8px;
-  transition: all 0.3s ease;
-  z-index: 99;
-}
-
-.filter-menu li {
-  list-style: none;
-  padding: 10px;
-  font-size: 16px;
-  cursor: pointer;
-}
-
-.filter-menu li:hover {
-  background-color: #4705ab;
-}
-
-.filter-dropdown.active .filter-menu {
-  opacity: 1;
-  max-height: 300px;
 }
