--- a/css/res.css
+++ b/css/res.css
@@ -405,17 +405,22 @@ li {
 
 /* load animation */
 #page-loader {
+  display: none; 
   position: fixed;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(255, 255, 255, 0.9);
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.9);
   z-index: 9999;
-  display: none;
   justify-content: center;
   align-items: center;
 }
+
+#page-loader.active {
+  display: flex;
+}
+
 
 .spinner {
   width: 50px;
